--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Neil Dave - AI Leader</title>
-  <meta content="" name="description">
-  <!-- <meta content="" name="keywords"> -->
+  <title>Neil Dave | AI Solution Architect & Thought Leader | AI Consulting for SMBs</title>
+  <meta name="description" content="Seasoned AI Solution Architect with 6+ years expertise in Machine Learning, Deep Learning, NLP/LLM, and Computer Vision. Transforming businesses with data-driven AI solutions and mentoring professionals.">
   <meta name="keywords" content="Data Scientist, General AI Engineer, Deep Learning, LLM Engineering, Computer Vision, Machine Learning, Artificial Intelligence, Data Analysis, Neural Networks, Python, Data Mining, Predictive Modeling, AI Research, Big Data Technologies">
+  
+  <!-- Open Graph Meta Tags (Social Media Sharing) -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://theneildave.com/">
+  <meta property="og:title" content="Neil Dave | AI Leadership & Solution Architect">
+  <meta property="og:description" content="Seasoned AI Solution Architect with 7+ years expertise in Machine Learning, Deep Learning, NLP/LLM, and Computer Vision.">
+  <meta property="og:image" content="https://theneildave.com/assets/img/profile-img.png">
+  <meta property="og:site_name" content="Neil Dave">
+  <meta property="og:locale" content="en_US">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://theneildave.com/">
+  <meta name="twitter:title" content="Neil Dave | AI Leadership & Solution Architect">
+  <meta name="twitter:description" content="Seasoned AI Solution Architect with 7+ years expertise in Machine Learning, Deep Learning, NLP/LLM, and Computer Vision.">
+  <meta name="twitter:image" content="https://theneildave.com/assets/img/profile-img.png">
+  
+  <!-- Canonical URL (Prevents Duplicate Content) -->
+  <meta name="canonical" href="https://theneildave.com/">
+  
+  <!-- Additional SEO Meta Tags -->
+  <meta name="author" content="Neil Dave">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
 
   <!-- Favicons -->
   <link href="assets/img/favicon1.png" rel="icon">
@@ -47,7 +70,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.png" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img.png" alt="Neil Dave AI Solution Architect" class="img-fluid rounded-circle" loading="lazy">
         <h1 class="text-light"><a href="index.html">Neil Dave</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.linkedin.com/in/neil-dave/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -106,7 +129,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img.png" class="img-fluid" alt="">
+            <img src="assets/img/profile-img.png" class="img-fluid" alt="Neil Dave Profile" loading="lazy">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Data Scientist</h3>
@@ -431,7 +454,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-genai">
             <div class="portfolio-wrap">
-              <img src="assets/img/ai.jpg" class="img-fluid" alt="">
+              <img src="assets/img/ai.jpg" class="img-fluid" alt="Gen AI and LLM Project" loading="lazy">
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a> -->
                 <a href="gen-ai.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -442,7 +465,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
-              <img src="assets/img/sepsis.jpg" class="img-fluid" alt="">
+              <img src="assets/img/sepsis.jpg" class="img-fluid" alt="Sepsis Detection Machine Learning" loading="lazy">
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a> -->
                 <a href="sepsis.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -451,7 +474,7 @@
           </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-rai">
             <div class="portfolio-wrap">
-              <img src="assets/img/rai.jpg" class="img-fluid" alt="">
+              <img src="assets/img/rai.jpg" class="img-fluid" alt="Responsible AI Project" loading="lazy">
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a> -->
                 <a href="rai.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -461,7 +484,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-dl">
             <div class="portfolio-wrap">
-              <img src="assets/img/run-prediction.jpg" class="img-fluid" alt="">
+              <img src="assets/img/run-prediction.jpg" class="img-fluid" alt="Running Prediction Deep Learning" loading="lazy">
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a> -->
                 <a href="run-prediction.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -471,7 +494,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-cv">
             <div class="portfolio-wrap">
-              <img src="assets/img/object-detection.jpg" class="img-fluid" alt="">
+              <img src="assets/img/object-detection.jpg" class="img-fluid" alt="Computer Vision Object Detection" loading="lazy">
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a> -->
                 <a href="cv-object-detection.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -481,7 +504,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-cv">
             <div class="portfolio-wrap">
-              <img src="assets/img/cv.jpg" class="img-fluid" alt="">
+              <img src="assets/img/cv.jpg" class="img-fluid" alt="Computer Vision Project" loading="lazy">
               <div class="portfolio-links">
                 <!-- <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a> -->
                 <a href="cv.html" title="More Details"><i class="bx bx-link"></i></a>
@@ -608,7 +631,7 @@
                     Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
-                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+                  <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="Sara Wilsson Designer Testimonial" loading="lazy">
                   <h3>Sara Wilsson</h3>
                   <h4>Designer</h4>
                 </div>
@@ -805,7 +828,8 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p><a href="mailto:hello@theneildave.in"></a>hello@theneildave.in</p>
+                <p><a href="mailto:hello@theneildave.in">hello@theneildave.in</a>
+                </p>
               </div>
 
               <!-- <div class="phone">
@@ -948,18 +972,18 @@
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.umd.js"></script>
-  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js" defer></script>
+  <script src="assets/vendor/aos/aos.js" defer></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js" defer></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js" defer></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js" defer></script>
+  <script src="assets/vendor/typed.js/typed.umd.js" defer></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js" defer></script>
+  <script src="assets/vendor/php-email-form/validate.js" defer></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/main.js" defer></script>
 
 </body>
 
