--- a/run-prediction.html
+++ b/run-prediction.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Neil Dave - AI Leader</title>
+  <title>Neil Dave | AI Solution Architect & Thought Leader | AI Consulting for SMBs</title>
   <meta content="" name="description">
   <meta name="keywords" content="Data Scientist, General AI Engineer, Deep Learning, LLM Engineering, Computer Vision, Machine Learning, Artificial Intelligence, Data Analysis, Neural Networks, Python, Data Mining, Predictive Modeling, AI Research, Big Data Technologies">
 
