--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Neil Dave | AI Solution Architect & Thought Leader | AI Consulting for SMBs</title>
-  <meta name="description" content="Seasoned AI Solution Architect with 6+ years expertise in Machine Learning, Deep Learning, NLP/LLM, and Computer Vision. Transforming businesses with data-driven AI solutions and mentoring professionals.">
+  <title>Neil Dave - AI Solution Architect & Thought Leader</title>
+  <meta name="description" content="Seasoned AI Solution Architect with 7+ years expertise in Machine Learning, Deep Learning, NLP/LLM, and Computer Vision. Transforming businesses with data-driven AI solutions and mentoring professionals.">
   <meta name="keywords" content="Data Scientist, General AI Engineer, Deep Learning, LLM Engineering, Computer Vision, Machine Learning, Artificial Intelligence, Data Analysis, Neural Networks, Python, Data Mining, Predictive Modeling, AI Research, Big Data Technologies">
   
   <!-- Open Graph Meta Tags (Social Media Sharing) -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://theneildave.com/">
-  <meta property="og:title" content="Neil Dave | AI Leadership & Solution Architect">
-  <meta property="og:description" content="Seasoned AI Solution Architect with 7+ years expertise in Machine Learning, Deep Learning, NLP/LLM, and Computer Vision.">
+  <meta property="og:title" content="Neil Dave - AI Leadership & Solution Architect">
+  <meta property="og:description" content="Seasoned AI Solution Architect with 7+ years expertise in Gen AI,Machine Learning, Deep Learning, NLP/LLM, and Computer Vision.">
   <meta property="og:image" content="https://theneildave.com/assets/img/profile-img.png">
   <meta property="og:site_name" content="Neil Dave">
   <meta property="og:locale" content="en_US">
@@ -21,7 +21,7 @@
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://theneildave.com/">
-  <meta name="twitter:title" content="Neil Dave | AI Leadership & Solution Architect">
+  <meta name="twitter:title" content="Neil Dave - AI Leadership & Solution Architect">
   <meta name="twitter:description" content="Seasoned AI Solution Architect with 7+ years expertise in Machine Learning, Deep Learning, NLP/LLM, and Computer Vision.">
   <meta name="twitter:image" content="https://theneildave.com/assets/img/profile-img.png">
   
